Added structure of page and some of reset CSS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <link rel="icon" type="image/png" href="https://icons.iconarchive.com/icons/yootheme/social-bookmark/16/social-google-box-icon.png"/>
 </head>
 <body>
-    
+    <nav>
+        <ul class="navbar">
+            <li><a href="#" class="nav_link">Gmail</a></li>
+            <li><a href="#" class="nav_link">Images</a></li>
+            <li><a href="#" class="nav_link">... <br>... <br>...</a></li>
+            <li><a href="#" class="nav_link"><img src="./img/avatar.jpg" alt="somebody's avatar"></a></li>
+        </ul>
+    </nav>
+
+    <main class="main">
+        <div class="logo"><img src="" alt="" class="logo_img"></div>
+
+        <form action="">
+
+        </form>
+
+        <p></p>
+    </main>
+
+    <footer class="footer">
+        <div class="footer_blocks"></div>
+        <div class="footer_blocks">
+            <ul class="footer_nav_left">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+
+            <ul class="footer_nav_right">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
