Added navigations, created svg dots

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <link rel="icon" type="image/png" href="https://icons.iconarchive.com/icons/yootheme/social-bookmark/16/social-google-box-icon.png"/>
 </head>
 <body>
-    <nav>
         <ul class="navbar">
             <li><a href="#" class="nav_link">Gmail</a></li>
             <li><a href="#" class="nav_link">Images</a></li>
-            <li><a href="#" class="nav_link">... <br>... <br>...</a></li>
-            <li><a href="#" class="nav_link"><img src="./img/avatar.jpg" alt="somebody's avatar"></a></li>
+            <li><a href="#" class="nav_link"><div class="img">
+                <div class="img-overlay"></div>
+            </div></a></li>
+            <!-- <li><a href="#" class="nav_link"><img src="./img/dots.svg" alt="" class="dots"></a></li> -->
+            <li><a href="#" class="nav_link"><img src="./img/avatar.jpg" alt="somebody's avatar" class="avatar"></a></li>
         </ul>
-    </nav>
 
     <main class="main">
         <div class="logo"><img src="" alt="" class="logo_img"></div>
@@ -24,7 +25,7 @@
 
         </form>
 
-        <p></p>
+        <p>ffff</p>
     </main>
 
     <footer class="footer">
