--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
         <ul class="navbar">
-            <li><a href="#" class="nav_link">Gmail</a></li>
-            <li><a href="#" class="nav_link">Images</a></li>
+            <li><a href="#" class="nav_link_text">Gmail</a></li>
+            <li><a href="#" class="nav_link_text">Images</a></li>
             <li><a href="#" class="nav_link"><div class="img">
                 <div class="img-overlay"></div>
             </div></a></li>
@@ -19,13 +19,16 @@
         </ul>
 
     <main class="main">
-        <div class="logo"><img src="" alt="" class="logo_img"></div>
+        <div class="logo"><img src="./img/googlelogo_color_272x92dp.png" alt="" class="logo_img"></div>
 
         <form action="">
+            <input type="search" name="" id="search">
 
+            <input type="button" value="Google Search" class="search">
+            <input type="button" value="I'm Feeling Lucky" class="search">
         </form>
-
-        <p>ffff</p>
+        
+        <p>Google offered in: <a href="#">русский</a></p>
     </main>
 
     <footer class="footer">
