--- a/index.html
+++ b/index.html
@@ -27,24 +27,26 @@
             <input type="button" value="Google Search" class="search">
             <input type="button" value="I'm Feeling Lucky" class="search">
         </form>
-        
+
         <p>Google offered in: <a href="#">русский</a></p>
     </main>
 
     <footer class="footer">
-        <div class="footer_blocks"></div>
+        <div class="footer_blocks">
+            <p class="footer_text">Russia</p>
+        </div>
         <div class="footer_blocks">
             <ul class="footer_nav_left">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href="">Advertising</a></li>
+                <li><a href="">Business</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">How Search works</a></li>
             </ul>
 
             <ul class="footer_nav_right">
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href="">Privacy</a></li>
+                <li><a href="">Terms</a></li>
+                <li><a href="">Settings</a></li>
             </ul>
         </div>
     </footer>
