--- a/index.html
+++ b/index.html
@@ -6,31 +6,38 @@
     <title>Google</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="https://icons.iconarchive.com/icons/yootheme/social-bookmark/16/social-google-box-icon.png"/>
+    <script src="https://kit.fontawesome.com/cb69931eb2.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- NAVBAR -->
         <ul class="navbar">
             <li><a href="#" class="nav_link_text">Gmail</a></li>
             <li><a href="#" class="nav_link_text">Images</a></li>
-            <li><a href="#" class="nav_link"><div class="img">
-                <div class="img-overlay"></div>
-            </div></a></li>
-            <!-- <li><a href="#" class="nav_link"><img src="./img/dots.svg" alt="" class="dots"></a></li> -->
+            <li><a href="#" class="nav_link"><div class="img"><div class="img-overlay"></div></div></a></li>
             <li><a href="#" class="nav_link"><img src="./img/avatar.jpg" alt="somebody's avatar" class="avatar"></a></li>
         </ul>
 
+        <!-- MAIN -->
     <main class="main">
         <div class="logo"><img src="./img/googlelogo_color_272x92dp.png" alt="" class="logo_img"></div>
 
         <form action="">
-            <input type="search" name="" id="search">
+            <div class="wrapper_search">
+                <i class="fas fa-search"></i>
+                <input type="search" name="" id="search">
+                <i class="fas fa-microphone"></i>
+            </div>
 
-            <input type="button" value="Google Search" class="search">
-            <input type="button" value="I'm Feeling Lucky" class="search">
+            <div class="wrapper_search_btn">
+                <input type="button" value="Google Search" class="search">
+                <input type="button" value="I'm Feeling Lucky" class="search">
+            </div>
         </form>
 
         <p>Google offered in: <a href="#">русский</a></p>
     </main>
 
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="footer_blocks">
             <p class="footer_text">Russia</p>
